dev/test_programs/INVALID/group1/typedec6.go
package main;

type (x int, y int)
